2008-01-28  Stef Walter  <stef@memberwebs.com>

    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-prefs-cache.c: Remove option to start agent 
    from preferences dialog.  
    
2008-01-28  Stef Walter  <stef@memberwebs.com>

    * configure.in:
    * INSTALL:
    * daemon/seahorse-hkp-server.c:
    * libseahorse/seahorse-hkp-source.c:
    * libseahorse/seahorse-ldap-source.c: Use libsoup 2.4. Patches by 
    Dan Winship. Fixes bug #509704

2008-01-25  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Add new epiphany api versions.  Fixes bug #511216
    * plugins/seahorse-pgp.gedit-plugin.desktop.in: Added an icon attribute so 
    that an icon shows up in Gedit's plugin listing.  Fixes bug #512001

2008-01-24  Adam Schreiber  <sadam@clemson.edu>

    * agent/seahorse-agent.desktop.in.in: deleted
    * po/POTFILES.skip:
    * configure.in:
    * agent/Makefile.am: Revert autostarting seahorse-agent with xdg. Requires
    evil gpg.conf munging.

2008-01-24  Luca Ferretti  <elle.uca@libero.it>

    * agent/seahorse-agent.desktop.in.in:
      Missing part from bug #511224. Forgot to add to svn, sorry.	

2008-01-23  Adam Schreiber  <sadam@clemson.edu>

    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in.in: Revert patch from JP Rosevear.
      Reopens bug #503648

2008-01-22  Adam Schreiber  <sadam@clemson.edu>

    * po/POTFILES.in:
    * po/POTFILES.skip:
    * configure.in:
    * agent/Makefile.am: Autostart seahorse-agent with xdg.  Patch from 
    Luca Ferretti.  Fixes bug #511224


2008-01-20  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-util.c: Don't add an extra 'dot' to file names unless
    necessary.  Patch from Kip Warner.  Fixes bug #510928

2008-01-08  Wouter Bolsterlee  <wbolster@svn.gnome.org>

    * configure.in:

    Add gnome-vfs libs for the nautilus extension since
    they're not automatically pulled in with Nautilus