@@ -57,7 +57,6 @@ gboolean seahorse_agent_init ();
 void seahorse_agent_uninit ();
 
 /* Global options to set from the command line */
-extern gboolean seahorse_agent_displayvars;
 extern gboolean seahorse_agent_cshell;
 extern gboolean seahorse_agent_execvars;
 extern gboolean seahorse_agent_any_display;
