@@ -1,5 +1,12 @@
 2008-01-28  Stef Walter  <stef@memberwebs.com>
 
+	* agent/seahorse-agent-main.c:
+	* agent/seahorse-agent.c:
+	* agent/seahorse-agent.h: Remove option to munge gpg.conf on startup
+	from seahorse-agent.
+	
+2008-01-28  Stef Walter  <stef@memberwebs.com>
+
     * libseahorse/seahorse-prefs.glade:
     * libseahorse/seahorse-prefs-cache.c: Remove option to start agent 
     from preferences dialog.  
